# universe

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Dockerfile  README.md  build.sh  conanfile.txt  main.c
ci/: Dockerfile
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
shaders/: basic.frag  basic.vert  phong.frag
shaders/polygon/: colored.frag  colored_phong.frag  colored_phong.vert  textured_phong.frag  textured_phong.vert
src/: Polygon.c  Polygon.cpp  Polygon.h  camera.c  camera.cpp  camera.h  camera.hpp  config.hpp  constants.hpp  font.c  font.cpp  font.h  font.hpp  input.c  input.cpp  input.h  input.hpp  main.c  main.cpp  main.h  main.hpp  polygon.c  polygon.cpp  polygon.h  polygon.hpp  render.c  render.cpp  render.h  render.hpp  shaders.c  shaders.cpp  shaders.h  shaders.hpp  space.cpp  space.hpp  util.c  util.cpp  util.h  util.hpp  window.c  (+3 more)
